...
                                        <rect key="frame" x="0.0" y="325" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="g9u-Pb-3qf" id="FUM-Lz-XmH">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Input" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hd1-Ld-1Ni">
                                                    <rect key="frame" x="131" y="7" width="158" height="30"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <nil key="textColor"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                                </textField>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wix-Kg-CiN">
                                                    <rect key="frame" x="22" y="12" width="90" height="21"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AXg-Nr-1bU">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                                    <color key="backgroundColor" red="0.039215686274509803" green="0.25098039215686274" blue="0.69411764705882351" alpha="0.68015846631205679" colorSpace="calibratedRGB"/>
                                                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    <state key="normal" title="Sign in"/>
                                                    <connections>
                                                        <action selector="btnSignin:" destination="dxp-Qb-TQh" eventType="touchUpInside" id="AQE-to-Kkf"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
            </objects>
            <point key="canvasLocation" x="711.59420289855075" y="52.173913043478265"/>
        </scene>
        <!--Dashboard-->
        <scene sceneID="EGl-OQ-fLr">
            <objects>
                <tableViewController title="Dashboard" id="hBI-L9-Gi0" customClass="DashboardTableViewController" customModule="reset_ios" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="MTW-9N-yZQ">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <color key="separatorColor" red="0.89411764705882357" green="0.89411764705882357" blue="0.90980392156862744" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <prototypes>
...
                            <connections>
                                <action selector="btnEnroll:" destination="hBI-L9-Gi0" id="kRB-od-HdE"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Dashboard" id="dzC-tG-5hk">
                        <barButtonItem key="backBarButtonItem" title="Back" id="HGr-Tk-1Fe"/>
                        <barButtonItem key="rightBarButtonItem" image="settings" id="FJI-BE-eAB">
                            <connections>
                                <action selector="btnSettings:" destination="hBI-L9-Gi0" id="9hO-Eg-aXo"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
            </objects>
            <point key="canvasLocation" x="2499" y="54"/>
        </scene>
        <!--Account Settings-->
        <scene sceneID="VOs-Ks-SKm">
            <objects>
                <tableViewController storyboardIdentifier="AccountTableViewController" title="Account Settings" id="d3g-Bu-88V" customClass="AccountTableViewController" customModule="reset_ios" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="white" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="Wx7-Tj-kLt">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                        <sections>
                            <tableViewSection headerTitle="My profile" id="H3o-P7-8J4">
...
